--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,13 @@
   outline: none;
 }
 
+h1,
+h2,
+h3 {
+  padding: 0;
+  margin: 0;
+}
+
 :root {
   --clr-white: #fff;
   --clr-black: #000;
@@ -28,13 +35,6 @@ body {
 }
 
 /* global css */
-img {
-  width: 100%;
-  height: auto;
-  -o-object-fit: contain;
-  object-fit: contain;
-}
-
 a {
   text-decoration: none;
   color: var(--clr-white);
@@ -44,29 +44,21 @@ li {
   list-style: none;
 }
 
-.btn {
-  display: inline-block;
-  padding: 0.5rem 1.5rem;
-  margin-top: 0.5rem;
-  text-transform: capitalize;
-  font-size: 1.2rem;
-  font-weight: 500;
-  cursor: pointer;
-  /* customize */
-  background-color: transparent;
-  color: white;
-  border: 2px solid var(--clr-white);
-}
-
 /* Custom CSS */
 
 /* Navbar */
 .navbar {
-  padding: 33px 28px;
+  position: fixed;
+  top: 0;
+  z-index: 1000;
+  width: 100%;
+  background-color: transparent;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s;
+  padding: 15px 28px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: var(--clr-black);
 }
 
 .logo {
@@ -85,6 +77,27 @@ li {
 
 .menu ul li {
   margin-left: 20px;
+}
+
+.menu ul li a {
+  position: relative;
+  text-decoration: none;
+  color: var(--clr-white);
+}
+
+.menu ul li a::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  height: 0.5px;
+  background-color: var(--clr-white);
+  transition: width 0.2s;
+}
+
+.menu ul li a:hover::before {
+  width: 100%;
 }
 
 .hamburger {
@@ -119,18 +132,3 @@ li {
     margin: 3px 0;
   }
 }
-
-
-@media screen and (min-width: 576px) {}
-
-/* Medium devices (tablets) */
-
-@media (min-width: 768px) {}
-
-/* Large devices (desktops) */
-
-@media (min-width: 991px) {}
-
-/* Extra large devices (large desktops) */
-
-@media (min-width: 1200px) {}
