--- a/styles/style.css
+++ b/styles/style.css
@@ -132,3 +132,295 @@ li {
     margin: 3px 0;
   }
 }
+
+/* SECTIONS */
+.section {
+  position: relative;
+  height: 100vh;
+}
+
+/* Section A */
+.section-a-bg-img {
+  margin: 0;
+  padding: 0;
+  background-image: url(../assets/images/section-a.webp);
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  top: 0;
+}
+
+/* Section B */
+.section-b-bg-img {
+  margin: 0;
+  padding: 0;
+  background-image: url(../assets/images/section-b.webp);
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  top: 0;
+}
+
+/* Section C */
+.section-c-bg-img {
+  margin: 0;
+  padding: 0;
+  background-image: url(../assets/images/section-c.webp);
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  top: 0;
+}
+
+/* Section D */
+.section-d-bg-img {
+  margin: 0;
+  padding: 0;
+  background-image: url(../assets/images/section-d.webp);
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  top: 0;
+}
+
+/* Section E */
+.section-e-bg-img {
+  margin: 0;
+  padding: 0;
+  background-image: url(../assets/images/section-e.webp);
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  top: 0;
+}
+
+/* Section F */
+.section-f-bg-img {
+  margin: 0;
+  padding: 0;
+  background-image: url(../assets/images/section-f.webp);
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  top: 0;
+}
+
+/* Text Section */
+
+.section-text {
+  position: absolute;
+  bottom: 15%;
+  right: 55%;
+  transform: translate(-50%, -50%);
+  color: var(--clr-white);
+}
+
+.section-a .section-text {
+  bottom: 15%;
+  right: 55%;
+  transform: translate(-50%, -50%);
+}
+
+.section-b .section-text {
+  bottom: 15%;
+  right: 49.5%;
+  transform: translate(-50%, -50%);
+}
+
+.section-c .section-text {
+  bottom: 15%;
+  right: 55.5%;
+  transform: translate(-50%, -50%);
+}
+
+.section-d .section-text {
+  bottom: 15%;
+  right: 49.6%;
+  transform: translate(-50%, -50%);
+}
+
+.section-e .section-text {
+  bottom: 15%;
+  right: 51.3%;
+  transform: translate(-50%, -50%);
+}
+
+.section-f .section-text {
+  bottom: 15%;
+  right: 39%;
+  transform: translate(-50%, -50%);
+}
+
+.section-text h4,
+.section-text h1,
+.section-text .btn {
+  font-size: 22px;
+  font-weight: 200;
+  display: block;
+  margin: 10px 0;
+}
+
+.section-text h1 {
+  font-size: 50px;
+  font-weight: bold;
+}
+
+.section-text .btn {
+  display: inline-block;
+  padding: 12px 50px;
+  text-transform: capitalize;
+  cursor: pointer;
+  background-color: transparent;
+  color: var(--clr-white);
+  border: 2px solid var(--clr-white);
+  margin-top: 25px;
+  position: relative;
+  overflow: hidden;
+}
+
+.section-text .btn span {
+  font-size: 16px;
+  font-weight: bold;
+  position: relative;
+}
+
+.section-text .btn::before,
+.section-text .btn::after {
+  content: "";
+  position: absolute;
+  background: white;
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+  z-index: -1;
+  transform: scaleY(0);
+  transform-origin: bottom;
+  transition: transform 0.3s;
+}
+
+.section-text .btn::before {
+  left: 0;
+}
+
+.section-text .btn::after {
+  right: 0;
+}
+
+.section-text .btn:hover::before,
+.section-text .btn:hover::after {
+  transform: scaleY(1);
+}
+
+.section-text .btn:hover span {
+  color: var(--clr-black);
+  font-weight: bold;
+}
+
+@media (max-width: 768px) {
+
+  .section-text {
+    overflow: hidden;
+  }
+
+  .section-a .section-text {
+    bottom: -4%;
+    right: -44%;
+    transform: translate(-50%, -50%);
+  }
+
+  .section-b .section-text {
+    width: 70vw;
+    bottom: -4%;
+    right: -11.7%;
+    transform: translate(-50%, -50%);
+  }
+
+  .section-c .section-text {
+    bottom: -4%;
+    right: -42.5%;
+    transform: translate(-50%, -50%);
+  }
+
+  .section-d h1 {
+    width: 90vw;
+    height: fit-content;
+  }
+
+  .section-d .section-text {
+    bottom: -7%;
+    right: -42%;
+    transform: translate(-50%, -50%);
+  }
+
+  .section-d .section-text br {
+    display: none;
+  }
+
+  .section-e .section-text {
+    width: 80%;
+    bottom: -4%;
+    right: -26.4%;
+    transform: translate(-50%, -50%);
+  }
+
+  .section-f h1 {
+    width: 90vw;
+    height: fit-content;
+  }
+
+  .section-f .section-text {
+    bottom: -11.5%;
+    right: -42%;
+    transform: translate(-50%, -50%);
+  }
+
+  .section-f .section-text br {
+    display: none;
+  }
+
+  .section-text h1 {
+    font-size: 40px;
+    font-weight: bold;
+  }
+}
+
+/* Footer */
+
+footer {
+  background-color: var(--clr-black);
+  color: var(--clr-grey);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+footer ul li {
+  display: inline-block;
+  margin: 64px 13px;
+
+  font-size: 13px;
+}
+
+@media (max-width: 768px) {
+  footer ul {
+    margin: 64px 0;
+    text-align: center;
+  }
+
+  footer ul li {
+    flex-wrap: wrap;
+    margin: 5px 6px;
+  }
+}
